fix two color shades overflowing

--- a/src/components/colorselector/styles.module.scss
+++ b/src/components/colorselector/styles.module.scss
@@ -27,7 +27,8 @@
 
 .custom {
   display: flex;
-  gap: 1rem;
+  gap: .5rem;
+  width: 100%;
 }
 
 .tab {
